--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Test</title>
+    <style>
+      table,tr,td{
+        border-collapse: collapse;
+        border: 1px solid black;
+      }
+    </style>
   </head>
   <body>
     <h2>Test</h2>
