--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
       table,tr,td{
         border-collapse: collapse;
         border: 1px solid black;
+        padding: 2%;
       }
     </style>
   </head>
