--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,15 @@
   <head>
     <title>Test</title>
     <style>
+      table{
+        width: 50%;
+        margin: 3% auto;
+      }
       table,tr,td{
         border-collapse: collapse;
         border: 1px solid black;
+      }
+      td{
         padding: 2%;
       }
     </style>
